--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=3001
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+
+eureka.client.service-url.default-zone=http://localhost:5001/eureka
